Добавляет миграцию таблицы users, описание для апи ручек (Users table)
