# openapi/openapi.yaml
@@ -37,7 +37,7 @@ paths:
                 $ref: '#/components/schemas/Task'
   /api/tasks/{id}:
     patch:
-      summary: Update a task
+      summary: Update task
       parameters:
         - name: id
           in: path
@@ -63,14 +63,18 @@ paths:
                 $ref: '#/components/schemas/Task'
         "404":
           description: Task not found
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/MsgResponse"
         "400":
           description: Bad request for update task
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/ErrorResponse"
+                $ref: "#/components/schemas/MsgResponse"
     delete:
-      summary: Delete a task
+      summary: Delete task
       parameters:
         - name: id
           in: path
@@ -81,10 +85,112 @@ paths:
       tags:
         - tasks
       responses:
-        '204':
+        '200':
           description: Task deleted
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/MsgResponse"
         "404":
           description: Task not found
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/MsgResponse"
+  /api/users:
+    get:
+      summary: Get all users
+      tags:
+        - users
+      responses:
+        '200':
+          description: A list of users
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/User'
+    post:
+      summary: Create new user
+      tags:
+        - users
+      requestBody:
+        description: The user to create
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/User'
+      responses:
+        '201':
+          description: The created task
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
+  /api/users/{id}:
+    patch:
+      summary: Update user
+      tags:
+        - users
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: uint
+      requestBody:
+        description: The user to update
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/User'
+      responses:
+        '200':
+          description: The updated task
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
+        "404":
+          description: Task not found
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/MsgResponse"
+        "400":
+          description: Bad request for update task
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/MsgResponse"
+    delete:
+      summary: Delete user
+      tags:
+        - users
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: uint
+      responses:
+        '200':
+          description: Task deleted
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/MsgResponse"
+        "404":
+          description: Task not found
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/MsgResponse"
 
 components:
   schemas:
@@ -98,7 +204,17 @@ components:
           type: string
         is_done:
           type: boolean
-    ErrorResponse:
+    User:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: uint
+        email:
+          type: string
+        password:
+          type: string
+    MsgResponse:
       type: object
       properties:
         message:
